--- a/15 Days 30 Projects/Leetcode Metrics App/style.css
+++ b/15 Days 30 Projects/Leetcode Metrics App/style.css
@@ -9,14 +9,13 @@
 body {
     background: linear-gradient(90deg, blue, aqua);
     color: white;
-    height: 100%;
     width: 100%;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 .container {
-    height: 100%;
     display: flex;
     flex-direction: column;
     gap: 1rem;
