--- a/15 Days 30 Projects/Random Password Generator/style.css
+++ b/15 Days 30 Projects/Random Password Generator/style.css
@@ -5,7 +5,9 @@
     font-family: "Poppins", sans-serif;
 }
 body {
-    background-color: #001d34;
+    background: linear-gradient(145deg, aqua, blue);
+    width: 100%;
+    height: 100vh;
     color: white;
 }
 .container {
